bug 970279 - tie null transactions to cancel and timeout events r=hurley