netwerk/protocol/http/NullHttpTransaction.h
@@ -34,8 +34,13 @@ public:
 
   nsHttpConnectionInfo *ConnectionInfo() { return mConnectionInfo; }
 
-  // An overload of nsAHttpTransaction::IsNullTransaction()
-  bool IsNullTransaction() { return true; }
+  // Overload of nsAHttpTransaction methods
+  bool IsNullTransaction() MOZ_OVERRIDE MOZ_FINAL { return true; }
+  bool ResponseTimeoutEnabled() const MOZ_OVERRIDE MOZ_FINAL {return true; }
+  PRIntervalTime ResponseTimeout() MOZ_OVERRIDE MOZ_FINAL
+  {
+    return PR_SecondsToInterval(15);
+  }
 
 private:
 
